EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/15/2009==
AndMetal: Added rule Combat:ProcTargetOnly(true). Allows the change from Rev 606 that limits procs to only the target to be removed. Note: AE procs can still cause stability issues if it is set to false.
AndMetal: Fixed some "no newline at end of file" warnings.
AndMetal: Corrected formatting/typo for some # commands.
AndMetal: Fixed a memory leak in Client::ZonePC().
KLS: Changed how QGlobals are tracked on the server to reduce the amount of times we query the database.  I've tested it quite a bit but if you find anything wrong with the new implementation: report it.

==10/07/2009==
Rogean: #motd now updates clients instantly serverwide.

==09/30/2009==
Rogean: Fixed possible crash in Mob::CheckWillAggro();
Rogean: Temporarily Disabled Fear MaxLevel Check causing a crash.
Trevius: Added Quest Commands quest::playerfeature(feature, setting) and quest::npcfeature(feature, setting) - See Wiki for details on usage.
Trevius: Added Quest Objects GetHairColor(), GetBeardColor(), GetEyeColor1(), GetEyeColor2(), GetHairStyle(), GetLuclinFace(), GetBeard(), GetDrakkinHeritage(), GetDrakkinTattoo(), and GetDrakkinDetails().

==09/29/2009==
Rogean: Direct Heal and Rune Aggro are now based off the mana cost of the spell.
Rogean: HoT Aggro is now based off the per-tic heal amount, when the spell lands.
Rogean: Fixed several issues with focus effects. Beneficial Hate Reduction Focus should now work.
Rogean: Fixed AA Spell Casting Subtlety not applying to heal aggro. Also changed to correct values.

==09/27/2009==
cavedude: (Shin Noir) Implemented Wizard AA: Teleport Bind.
cavedude: (tsowl) GMs will no longer need a key for locked portal doors.
cavedude: (tsowl) Fix for shared and normal bank dupes.
cavedude: (Nachyoz) Corrected a bug preventing $faction from reporting correct values.